# bun-webgpu

./: .gitignore  .npmignore  README.md  build-linux.sh  build-manual.sh  build-windows.ps1  index.d.ts  package.json  run-cts.sh  tsconfig.json
.github/workflows/: ci.yml  publish-package.yml  setup-zig-linux.sh  tag-release.yml
dawn/: README.md  download_artifacts.ts  webgpu.h
dawn/ include/: math.h
scripts/: build.mjs  build.ts  link-dev.sh  publish.mjs  publish.ts
src/: GPU.ts  GPUAdapter.test.ts  GPUAdapter.ts  GPUBindGroup.ts  GPUBindGroupLayout.ts  GPUBuffer.ts  GPUCommandBuffer.ts  GPUCommandEncoder.ts  GPUComputePassEncoder.ts  GPUComputePipeline.ts  GPUDevice.test.ts  GPUDevice.ts  GPUPipelineLayout.ts  GPUQuerySet.ts  GPUQueue.test.ts  GPUQueue.ts  GPURenderBundle.ts  GPURenderBundleEncoder.ts  GPURenderPassEncoder.ts  GPURenderPipeline.ts  GPUSampler.ts  GPUShaderModule.ts  GPUTexture.ts  GPUTextureView.ts  buffer_pool.test.ts  buffer_pool.ts  common.ts  ffi.ts  index.test.ts  index.ts  shared.ts  structs_def.ts  structs_ffi.test.ts  structs_ffi.ts
src/c/: CMakeLists.txt  lib.c
src/examples/: triangle-loop.ts  triangle.ts
src/mocks/: GPUCanvasContext.ts
src/utils/: error.ts
src/zig/: build.zig  lib.zig
src/zig-c/: build.zig  lib.c
src/zig/example/: README.md  build.zig  triangle_loop.zig
tools/: cts.ts  expectations.ts  setup.ts
